Fix modal width on mobile display

--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -6,16 +6,14 @@
 
 .modal{
     background-color: var(--bg-secondary);
-    min-width: 400px;
-    min-height: 200px;
-    max-width: 30%;
+    max-width: 90%;
     border-radius: 1rem;
     box-shadow: var(--shadow);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    padding: 2rem;
-    gap: 2rem;
+    padding: 1rem;
+    gap: 1rem;
     align-items: center;
     justify-content: stretch;
 }
@@ -25,4 +23,15 @@
     grid-column-end: -1;
     color: var(--text);
     text-align: center;
+}
+
+@media (min-width: 700px) {
+    
+    .modal{
+        min-width: 400px;
+        min-height: 200px;
+        max-width: 30%;
+        padding: 2rem;
+        gap: 2rem;
+    }
 }
